src/snapshots/hello_boys__tests__message_30_days.snap
---
source: src/main.rs
expression: message
---
From: HELLO BOYS ITS PEPPA <helloboysitspeppa@gmail.com>
Subject: 30 day(s) of no one living in 52 Castletown road

Dear all,

52 Castletown road is still on the market, meaning so far as least £2628 of lost income for Peppa.

- 5 days until the deposit doesn't cover the lost rent (85% of the way)
- 335 days until our tenancy doesn't cover the lost rent (8% of the way)

The property is currently being listed at £2665 PM

Enjoy your day!

