src/snapshots/hello_boys__tests__message_deposit_lost.snap
---
source: src/main.rs
expression: message
---
From: HELLO BOYS ITS PEPPA <helloboysitspeppa@gmail.com>
Subject: 50 day(s) of no one living in 52 Castletown road

Dear all,

52 Castletown road is still on the market, meaning so far as least £4381 of lost income for Peppa.

- the deposit now doesn't cover lost rent
- 315 days until our tenancy doesn't cover the lost rent (13% of the way)

The property is currently being listed at £2665 PM

Enjoy your day!

