src/snapshots/hello_boys__tests__message_one_day.snap
---
source: src/main.rs
expression: message
---
From: HELLO BOYS ITS PEPPA <helloboysitspeppa@gmail.com>
Subject: 1 day(s) of no one living in 52 Castletown road

Dear all,

52 Castletown road is still on the market, meaning so far as least £87 of lost income for Peppa.

- 34 days until the deposit doesn't cover the lost rent (2% of the way)
- 364 days until our tenancy doesn't cover the lost rent (0% of the way)

The property is currently being listed at £2665 PM

Enjoy your day!

