src/snapshots/hello_boys__tests__message_rent_lost.snap
---
source: src/main.rs
expression: message
---
From: HELLO BOYS ITS PEPPA <helloboysitspeppa@gmail.com>
Subject: 365 day(s) of no one living in 52 Castletown road

Dear all,

52 Castletown road is still on the market, meaning so far as least £31981 of lost income for Peppa.

- the deposit now doesn't cover lost rent
- our rent now doesn't cover loses

The property is currently being listed at £2665 PM

Enjoy your day!

